fix(sigmoid function): Correct Sigmoid formula

--- a/Week 1/Basic_Python_06_01_2024.ipynb
+++ b/Week 1/Basic_Python_06_01_2024.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
     "\n",
     "def calculate_activation():\n",
     "    def sigmoid(x):\n",
-    "        return 1/(1+math_e**x)\n",
+    "        return 1/(1+math_e**(-x))\n",
     "\n",
     "    def relu(x):\n",
     "        return max(x, 0)\n",
@@ -236,6 +236,23 @@
      "output_type": "stream",
      "text": [
       "belu is not supported\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculate_activation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid: f(2.0) = 0.8807970779778823\n"
      ]
     }
    ],
