refactor: Dummy change to trigger QG check

--- a/Week 2/Data_Structure_06_10_2024.ipynb
+++ b/Week 2/Data_Structure_06_10_2024.ipynb
@@ -311,7 +311,7 @@
     "    return dp[m][n]\n",
     "\n",
     "\n",
-    "def back_track_lahvenshtein_distance(dp: list, s1: str, s2: str, current_string: str = None) -> None:\n",
+    "def back_track_lahvenshtein_distance(dp: list, s1: str, s2: str, current_string=None) -> None:\n",
     "    m, n = len(s1), len(s2)\n",
     "    # Initialize the current string for the first call\n",
     "    if current_string is None:\n",
