style: Change function's name to lower case to align with PEP8

--- a/Week 2/Data_Structure_06_10_2024.ipynb
+++ b/Week 2/Data_Structure_06_10_2024.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Assưme that the input is a list of integers and an integer k\n",
-    "def max_pooling_1D(arr: list, k: int = 3) -> list:\n",
+    "def max_pooling_1d(arr: list, k: int = 3) -> list:\n",
     "    n = len(arr)\n",
     "    if n == 0:\n",
     "        return []\n",
@@ -56,7 +56,7 @@
    "source": [
     "num_list = [3, 4, 5, 1, -44, 5, 10, 12, 33, 1]\n",
     "k = 3\n",
-    "max_pooling_1D(num_list, k)  # [5, 5, 5, 10, 12, 33, 33]"
+    "max_pooling_1d(num_list, k)  # [5, 5, 5, 10, 12, 33, 33]"
    ]
   },
   {
