refactor: Update to avoid depricated code

--- a/Module 2/Week 1/Numpy_07_06_2024.ipynb
+++ b/Module 2/Week 1/Numpy_07_06_2024.ipynb
@@ -264,8 +264,8 @@
     }
    ],
    "source": [
-    "a = np. array([2, 6, 1, 9, 10, 3, 27])\n",
-    "index = np. where((a >= 5) & (a <= 10))\n",
+    "a = np.array([2, 6, 1, 9, 10, 3, 27])\n",
+    "index = np.nonzero((a >= 5) & (a <= 10))\n",
     "print(\" result \", a[index])"
    ]
   },
@@ -841,10 +841,13 @@
     "# Solution 2\n",
     "\n",
     "\n",
-    "@np.vectorize\n",
     "def categorize_sales(x, mean_sales):\n",
-    "    return 'Good' if x > mean_sales else 'Average' if x == mean_sales else 'Bad'\n",
-    "\n",
+    "    if x > mean_sales:\n",
+    "        return 'Good'\n",
+    "    elif x == mean_sales:\n",
+    "        return 'Average'\n",
+    "    else:\n",
+    "        return 'Bad'\n",
     "\n",
     "res = categorize_sales(data_sales, mean_sales)\n",
     "res[7:10]"
