feat: Complete solution for Module 2 Week 4

--- a/Module 2/Week 3/Probability_Exercise_07_20_2024.ipynb
+++ b/Module 2/Week 3/Probability_Exercise_07_20_2024.ipynb
@@ -770,7 +770,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unravel_index() missing 1 required positional argument: 'indices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munravel_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m<__array_function__ internals>:4\u001b[0m, in \u001b[0;36munravel_index\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unravel_index() missing 1 required positional argument: 'indices'"
+     ]
+    }
+   ],
    "source": [
     "np.unravel_index()"
    ]
@@ -996,7 +1009,7 @@
     "df_0 = df.query('Class==0')\n",
     "# mean = df_0['Length'].mean()\n",
     "mean_0 = df_0['Length'].sum() / len(df_0)\n",
-    "# var = df_0['Length'].var(ddof=0)\n",
+    "# var_0 = df_0['Length'].var()\n",
     "var_0 = ((df_0['Length'] - mean_0)**2).sum() / len(df_0)\n",
     "print(mean_0, var_0)"
    ]
@@ -1018,7 +1031,7 @@
     "df_1 = df.query('Class==1')\n",
     "# mean = df_1['Length'].mean()\n",
     "mean_1 = df_1['Length'].sum() / len(df_1)\n",
-    "# var = df_0['Length'].var(ddof=0)\n",
+    "# var_1 = df_0['Length'].var()\n",
     "var_1 = ((df_1['Length'] - mean_1)**2).sum() / len(df_1)\n",
     "print(mean_1, var_1)"
    ]
@@ -1095,6 +1108,29 @@
    ],
    "source": [
     "norm.pdf(3.4, mean_1, var_1**0.5) * 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0019007203563592419 0.9980992796436408\n"
+     ]
+    }
+   ],
+   "source": [
+    "P_X_C0 = norm.pdf(3.0, mean_0, var_0**0.5)\n",
+    "P_X_C1 = norm.pdf(3.0, mean_1, var_1**0.5)\n",
+    "P_C0, P_C1 = len(df_0) / len(df), len(df_1) / len(df)\n",
+    "P_X = P_X_C0 * P_C0 + P_X_C1 * P_C1\n",
+    "P_C0_X = P_X_C0 * P_C0 / P_X\n",
+    "P_C1_X = P_X_C1 * P_C1 / P_X\n",
+    "print(P_C0_X, P_C1_X)"
    ]
   },
   {
